deploy/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE_NAME-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /INGRESS_ROUTE(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: SERVICE_NAME
            port:
              number: 80
